Fixed images upload bug

--- a/block-pages/block_blacklisted.html
+++ b/block-pages/block_blacklisted.html
@@ -2,7 +2,7 @@
 <html>
 
     <head>
-        <link rel="icon" href="gorilla-icon-red.png">
+        <link rel="icon" href="https://i.ibb.co/hxGTJnZ/gorilla-icon-red.png">
         <title>Blocked by Gorilla</title>
         <style>
             html {
