Fixed bug (last commit didn't fixed it)

--- a/block-pages/block.html
+++ b/block-pages/block.html
@@ -2,7 +2,7 @@
 <html>
 
     <head>
-        <link rel="icon" href="https://i.ibb.co/0qM2703/gorilla-icon.png">
+        <link rel="icon" href="https://i.ibb.co/qBsjSHw/gorilla-icon.png">
         <title>Blocked by Gorilla</title>
         <style>
             html {
@@ -33,7 +33,7 @@
     </head>
 
     <body>
-        <img src="https://i.ibb.co/B2WC4Lf/gorilla-waf-logo-regular.png" alt="Logo-Gorilla-WAF" width="70%">
+        <img src="https://i.ibb.co/s9xV5jg/gorilla-waf-logo-regular.png" alt="Logo-Gorilla-WAF" width="70%">
         <h1>An attack detected by Gorilla's WAF</h1>
        
         <p>
