--- a/block-pages/block_blacklisted.html
+++ b/block-pages/block_blacklisted.html
@@ -2,7 +2,7 @@
 <html>
 
     <head>
-        <link rel="icon" href="https://i.ibb.co/hxGTJnZ/gorilla-icon-red.png">
+        <link rel="icon" href="https://i.ibb.co/Ng0Gdkm/gorilla-icon-red.png">
         <title>Blocked by Gorilla</title>
         <style>
             html {
@@ -33,7 +33,7 @@
     </head>
 
     <body>
-        <img src="gorilla-waf-logo-red.png" alt="Logo-Gorilla-WAF" width="70%">
+        <img src="https://i.ibb.co/2MfGM8M/gorilla-waf-logo-red.png" alt="Logo-Gorilla-WAF" width="70%">
         <h1>You were banned from this site</h1>
         
         <p>
