Each page is now more detailed, and the Incoming Requests page is ready to get its backend code

--- a/gorilla_admin_manager_gui/blacklist.html
+++ b/gorilla_admin_manager_gui/blacklist.html
@@ -24,9 +24,15 @@
     </div>
 
     <!-- Main content -->
-    <h1>
-      Welcome to BLACKLIST!
-    </h1>
+
+    <!-- Page explanation - What to do here? -->
+    <div class="explanation">
+      <p>
+        Here you can see who's in the Blacklist and what attacks they've done. <br>
+        Additionally, you can add/remove clients from the Blacklist. <br>
+        Note: A client will consider "blacklisted" if it has done 3 or more attacks. <br>
+      </p>
+    </div>
 
   </body>
 
