--- a/gorilla_admin_manager_gui/index.html
+++ b/gorilla_admin_manager_gui/index.html
@@ -24,9 +24,13 @@
     </div>
 
     <!-- Main content -->
-    <h1>
-      Welcome to HOME!
-    </h1>
+
+    <!-- Page explanation - What to do here? -->
+    <div class="explanation">
+      <p>
+        Attach some explanation about Gorilla's WAF...? <br>
+      </p>
+    </div>
   
   </body>
 
