--- a/gorilla_admin_manager_gui/settings.html
+++ b/gorilla_admin_manager_gui/settings.html
@@ -24,9 +24,17 @@
     </div>
 
     <!-- Main content -->
-    <h1>
-      Welcome to SETTINGS!
-    </h1>
+    
+    <!-- Page explanation - What to do here? -->
+    <div class="explanation">
+      <p>
+        Here you can edit the settings of the WAF. <br>
+        The settings are: <br>
+           1. Enable/Disable the WAF <br>
+           2. Configure how many attacks a client can do before being blacklisted <br>
+           3. Configure allowed redirection URLs (to prevent Open Redirect attack). <br>
+      </p>
+    </div>
     
   </body>
 
