--- a/gorilla_admin_manager_gui/statistics.html
+++ b/gorilla_admin_manager_gui/statistics.html
@@ -24,9 +24,13 @@
     </div>
 
     <!-- Main content -->
-    <h1>
-      Welcome to STATISTICS!
-    </h1>
+
+    <!-- Page explanation - What to do here? -->
+    <div class="explanation">
+      <p>
+        Here you can see Gorilla's WAF statistics. <br>
+      </p>
+    </div>
 
   </body>
 
