--- a/Gorilla-AdminManager-GUI/Frontend/incoming_requests.html
+++ b/Gorilla-AdminManager-GUI/Frontend/incoming_requests.html
@@ -77,9 +77,9 @@
 			</div>
             
 
-			<div class="table-data" id="incoming_requests_table">
+			<div class="table-data">
 
-				<div class="order">
+				<div class="order" id="incoming_requests_table">
 					<div class="head">
 						<h3>Recent Incoming Requests</h3>
 					</div>
@@ -158,7 +158,7 @@
 					</table>
 				</div>
                 
-				<div class="expand-request">
+				<div id="expand_reqeust_table">
                     <p><b>Time: </b>16/03/2023 17:57</p>
                     <p><b>IP Address: </b>10.0.0.4</p>
                     <p><b>Port: </b>2935</p>
