--- a/Gorilla-AdminManager-GUI/Frontend/settings.html
+++ b/Gorilla-AdminManager-GUI/Frontend/settings.html
@@ -70,7 +70,7 @@
 							<a href="index.html">Gorilla's Admin Manager ></a>
 						</li>
 						<li>
-							<a class="active" href="index.html">Settings</a>
+							<a class="active" href="settings.html">Settings</a>
 						</li>
 					</ul>
 				</div>
