--- a/Gorilla-AdminManager-GUI/Frontend/statistics.html
+++ b/Gorilla-AdminManager-GUI/Frontend/statistics.html
@@ -70,7 +70,7 @@
 							<a href="index.html">Gorilla's Admin Manager ></a>
 						</li>
 						<li>
-							<a class="active" href="index.html">Statistics</a>
+							<a class="active" href="statistics.html">Statistics</a>
 						</li>
 					</ul>
 				</div>
