--- a/Gorilla-AdminManager-GUI/Frontend/incoming_requests.html
+++ b/Gorilla-AdminManager-GUI/Frontend/incoming_requests.html
@@ -70,7 +70,7 @@
 							<a href="index.html">Gorilla's Admin Manager ></a>
 						</li>
 						<li>
-							<a class="active" href="index.html">Incoming Requests</a>
+							<a class="active" href="incoming_requests.html">Incoming Requests</a>
 						</li>
 					</ul>
 				</div>
@@ -98,7 +98,11 @@
 								<td>
 									<p>16/03/2023 17:59</p>
 								</td>
-								<td>192.168.2.1</td>
+								<td>
+									<p>
+										192.168.2.1
+									</p>
+								</td>
 								<td>
                                     <p>GET</p>
                                 </td>
@@ -110,7 +114,11 @@
 								<td>
 									<p>16/03/2023 17:57</p>
 								</td>
-								<td>10.0.0.4</td>
+								<td>
+									<p>
+										10.0.0.4
+									</p>
+								</td>
 								<td>
                                     <p>GET</p>
                                 </td>
@@ -122,7 +130,11 @@
 								<td>
 									<p>16/03/2023 17:57</p>
 								</td>
-								<td>127.0.0.1</td>
+								<td>
+									<p>
+										127.0.0.1
+									</p>
+								</td>
 								<td>
                                     <p>POST</p>
                                 </td>
@@ -134,7 +146,11 @@
 								<td>
 									<p>15/03/2023 08:32</p>
 								</td>
-								<td>192.168.2.1</td>
+								<td>
+									<p>
+										192.168.2.1
+									</p>
+								</td>
 								<td>
                                     <p>GET</p>
                                 </td>
@@ -146,7 +162,11 @@
 								<td>
 									<p>15/03/2023 08:32</p>
 								</td>
-								<td>192.168.2.1</td>
+								<td>
+									<p>
+										192.168.2.1
+									</p>
+								</td>
 								<td>
                                     <p>GET</p>
                                 </td>
