Added feature to update tables when loading page (for now - for static data)

--- a/Gorilla-AdminManager-GUI/Frontend/blacklist.html
+++ b/Gorilla-AdminManager-GUI/Frontend/blacklist.html
@@ -99,7 +99,7 @@
 								<th>Is Blocked?</th>
 							</tr>
 						</thead>
-						<tbody>
+						<tbody id="blacklist_data">
 							<tr>
 								<td>
 									<p>
@@ -144,6 +144,6 @@
 	<!-- CONTENT -->
 	
 
-	<script src="script.js"></script>
+	<script src="blacklist.js"></script>
 </body>
 </html>
