--- a/Gorilla-AdminManager-GUI/Frontend/incoming_requests.html
+++ b/Gorilla-AdminManager-GUI/Frontend/incoming_requests.html
@@ -93,7 +93,7 @@
 								<th>URI</th>
 							</tr>
 						</thead>
-						<tbody>
+						<tbody id="incoming_requests_data">
 							<tr>
 								<td>
 									<p>16/03/2023 17:59</p>
@@ -213,6 +213,6 @@
 	<!-- CONTENT -->
 	
 
-	<script src="script.js"></script>
+	<script src="incoming_requests.js"></script>
 </body>
 </html>
