Security stuff in db_flask server so it'll be able to communicate with the GUI + add short demo to the GUI

--- a/Gorilla-AdminManager-GUI/Frontend/incoming_requests.html
+++ b/Gorilla-AdminManager-GUI/Frontend/incoming_requests.html
@@ -61,6 +61,10 @@
 		<!-- MAIN -->
 		<main>
             
+			<button onclick="getData()">Get Data</button>
+
+	<div id="xyz"></div>
+	
             <!-- Title of the page, with the right path -->
             <div class="head-title">
 				<div class="left">
