Done the table requests

--- a/Gorilla-AdminManager-GUI/Frontend/incoming_requests.html
+++ b/Gorilla-AdminManager-GUI/Frontend/incoming_requests.html
@@ -61,7 +61,7 @@
 		<!-- MAIN -->
 		<main>
             
-			<button onclick="getData()">Get Data</button>
+			<button onclick="getAllIncomingRequests()">Get Data</button>
 
 	<div id="xyz"></div>
 	
