Done onload and default HTML vals

--- a/Gorilla-AdminManager-GUI/Frontend/incoming_requests.html
+++ b/Gorilla-AdminManager-GUI/Frontend/incoming_requests.html
@@ -12,7 +12,7 @@
 	<title>Gorilla Admin Manager</title>
 </head>
 
-<body>
+<body onload="getAllIncomingRequests();">
 
 
 	<!-- SIDEBAR -->
@@ -97,82 +97,18 @@
 						<tbody id="incoming_requests_data">
 							<tr>
 								<td>
-									<p>16/03/2023 17:59</p>
+									<p>TIME</p>
 								</td>
 								<td>
 									<p>
-										192.168.2.1
+										IP
 									</p>
 								</td>
 								<td>
-                                    <p>GET</p>
+                                    <p>METHOD</p>
                                 </td>
                                 <td>
-                                    <p>/index.php</p>
-                                </td>
-							</tr>
-							<tr>
-								<td>
-									<p>16/03/2023 17:57</p>
-								</td>
-								<td>
-									<p>
-										10.0.0.4
-									</p>
-								</td>
-								<td>
-                                    <p>GET</p>
-                                </td>
-                                <td>
-                                    <p>/vulnerabilities/xss_r/?name=alon</p>
-                                </td>
-							</tr>
-							<tr>
-								<td>
-									<p>16/03/2023 17:57</p>
-								</td>
-								<td>
-									<p>
-										127.0.0.1
-									</p>
-								</td>
-								<td>
-                                    <p>POST</p>
-                                </td>
-                                <td>
-                                    <p>/login.php</p>
-                                </td>
-							</tr>
-							<tr>
-								<td>
-									<p>15/03/2023 08:32</p>
-								</td>
-								<td>
-									<p>
-										192.168.2.1
-									</p>
-								</td>
-								<td>
-                                    <p>GET</p>
-                                </td>
-                                <td>
-                                    <p>/vulnerabilities/sqli/</p>
-                                </td>
-							</tr>
-							<tr>
-								<td>
-									<p>15/03/2023 08:32</p>
-								</td>
-								<td>
-									<p>
-										192.168.2.1
-									</p>
-								</td>
-								<td>
-                                    <p>GET</p>
-                                </td>
-                                <td>
-                                    <p>/vulnerabilities</p>
+                                    <p>URI</p>
                                 </td>
 							</tr>
 						</tbody>
@@ -180,32 +116,7 @@
 				</div>
                 
 				<div id="expand_reqeust_table">
-                    <p><b>Time: </b>16/03/2023 17:57</p>
-                    <p><b>IP Address: </b>10.0.0.4</p>
-                    <p><b>Port: </b>2935</p>
-                    <p><b>Is Safe? </b>No</p>
-                    <p><b>Attack Name: </b> Cross-Site Scripting (XSS)</p>
-                    <p>
-                        <b>Content: </b><br>
-                        GET /vulnerabilities/xss_r/?name=alon HTTP/1.1
-                        <br>Connection: close,keep-alive
-                        <br>User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/111.0.0.0 Safari/537.36
-                        <br>Cookie: security_level=0; session=9603a1c6-1fe4-4f93-be1a-68ad6a5738ed.vsLXilN0X5P1XWLCWBveUL1PkW8; pvisitor=964360b4-305d-44c7-a813-e621ac19e47d; security=low; PHPSESSID=rfud62s3ru0guhv5he1i9i63ef
-                        <br>Sec-Ch-Ua-Mobile: ?0
-                        <br>Cache-Control: max-age=0
-                        <br>Host: localhost
-                        <br>Accept: text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.7
-                        <br>Upgrade-Insecure-Requests: 1
-                        <br>Sec-Fetch-Site: none
-                        <br>Sec-Fetch-Dest: document
-                        <br>Accept-Language: he-IL,he;q=0.9,en-US;q=0.8,en;q=0.7
-                        <br>Accept-Encoding: gzip, deflate, br
-                        <br>X-Forwarded-For: 127.0.0.1
-                        <br>Sec-Ch-Ua-Platform: "Windows"
-                        <br>Sec-Fetch-User: ?1
-                        <br>Sec-Ch-Ua: "Google Chrome";v="111", "Not(A:Brand";v="8", "Chromium";v="111"
-                        <br>Sec-Fetch-Mode: navigate
-                    </p>
+                    <p>To see full HTTP request and its detail, click on one in the table</p>
                 </div>
 			</div>
 		</main>
