Default and refresh blacklist page

--- a/Gorilla-AdminManager-GUI/Frontend/blacklist.html
+++ b/Gorilla-AdminManager-GUI/Frontend/blacklist.html
@@ -104,36 +104,19 @@
 							<tr>
 								<td>
 									<p>
-										192.168.2.1
+										IP
 									</p>
 								</td>
 								<td>
-									<p>2</p>
+									<p>NUM OF ATTACKS</p>
 								</td>
 								<td>
-									<p>XSS/HTML Injection, SQL Injection</p>
+									<p>ATTACKS PERFORMED</p>
 								</td>
 								<td>
-									<p>No</p>
+									<p>IS BLOCKED</p>
 								</td>
-								<td><a onclick="alert(1)"><img src="Resources/trash-icon.png"></a></td>
-							</tr>
-							<tr>
-								<td>
-									<p>
-										10.0.0.4
-									</p>
-								</td>
-								<td>
-									<p>3</p>
-								</td>
-								<td>
-									<p>SSI Injection, XSS/HTML Injection, SQL Injection</p>
-								</td>
-								<td>
-									<p>Yes</p>
-								</td>
-								<td><a onclick="alert(2)"><img src="Resources/trash-icon.png"></a></td>
+								<td><a><img src="Resources/trash-icon.png"></a></td>
 							</tr>
 						</tbody>
 					</table>
