Fixed bug in blacklist.html/js

--- a/Gorilla-AdminManager-GUI/Frontend/blacklist.html
+++ b/Gorilla-AdminManager-GUI/Frontend/blacklist.html
@@ -84,7 +84,7 @@
 						<button class="refresh_button" onclick="getBlacklist()"><img src="Resources/refresh-icon.png"></button>
 					</div>
 					
-					<form>
+					<form action="#">
 						<div id="field_and_error">
 							<div class="one_line_input" id="add_to_blacklist">
 								<input type="text" id="ip_to_add" placeholder="IP Address to add (X.X.X.X format)" required>
@@ -104,23 +104,6 @@
 							</tr>
 						</thead>
 						<tbody id="blacklist_data">
-							<tr>
-								<td>
-									<p>
-										IP
-									</p>
-								</td>
-								<td>
-									<p>NUM OF ATTACKS</p>
-								</td>
-								<td>
-									<p>ATTACKS PERFORMED</p>
-								</td>
-								<td>
-									<p>IS BLOCKED</p>
-								</td>
-								<td><a><img src="Resources/trash-icon.png"></a></td>
-							</tr>
 						</tbody>
 					</table>
 				</div>
