Colors, Blocking and cosmetic changes :)

--- a/Gorilla-AdminManager-GUI/Frontend/incoming_requests.html
+++ b/Gorilla-AdminManager-GUI/Frontend/incoming_requests.html
@@ -99,7 +99,7 @@
 					</table>
 				</div>
                 
-				<div id="expand_reqeust_table">
+				<div id="expand_reqeust_table" style="display: none;">
                     <p>To see full HTTP request and its detail, click on one in the table</p>
                 </div>
 			</div>
