Done Allowed URLs

--- a/Gorilla-AdminManager-GUI/Frontend/settings.html
+++ b/Gorilla-AdminManager-GUI/Frontend/settings.html
@@ -12,7 +12,7 @@
 	<title>Gorilla Admin Manager</title>
 </head>
 
-<body>
+<body onload="getAllowedURLs()">
 
 
 	<!-- SIDEBAR -->
@@ -81,15 +81,15 @@
 				<div class="order" id="blacklist_table">
 					<div class="head">
 						<h3>Allowed Redirect URLs</h3>
-						<button class="refresh_button" onclick="getBlacklist()"><img src="Resources/refresh-icon.png"></button>
+						<button class="refresh_button" onclick="getAllowedURLs()"><img src="Resources/refresh-icon.png"></button>
 					</div>
-					<p>Here you manage which URLs are allowed to redirect. 
+					<p class="explanation">Here you manage which URLs are allowed to redirect. 
 						<br>Please be accurate when writing the URLs, it must be exactly the way it's written in the site.</p>
 
 					<form action="#">
 						<div id="field_and_error">
 							<div class="one_line_input" id="add_to_allowed_redirect_urls">
-								<input type="text" id="ip_to_add" placeholder="Allowed redirect URL" required>
+								<input type="text" id="url_to_add" placeholder="Allowed redirect URL" required>
 								<button disabled="true" onclick="addURL()" type="submit" id="add_url_button"><img src="Resources/plus-icon.png"></button>
 							</div>
 							<div><p class="error-message" id="urlError">Error Message</p></div>
@@ -97,9 +97,15 @@
 					</form>
 
 					<table>
+						<thead>
+							<tr>
+								<th>URL</th>
+							</tr>
+						</thead>
 						<tbody id="allowed_urls_data">
 						</tbody>
 					</table>
+					
 				</div>
 			</div>
 
