--- a/Gorilla-AdminManager-GUI/Frontend/blacklist.html
+++ b/Gorilla-AdminManager-GUI/Frontend/blacklist.html
@@ -83,7 +83,7 @@
 						<h3>Blacklist</h3>
 						<button class="refresh_button" onclick="getBlacklist()"><img src="Resources/refresh-icon.png"></button>
 					</div>
-					<p>Here you can see all the attackers that Gorilla WAF has detected.
+					<p class="explanation">Here you can see all the attackers that Gorilla WAF has detected.
 						<br>You can remove someone by clicking the 'Trash' icon, or add someone by typing their IP and they'll be blocked permanently.</p>
 
 					<form action="#">
