--- a/Gorilla-AdminManager-GUI/Frontend/incoming_requests.html
+++ b/Gorilla-AdminManager-GUI/Frontend/incoming_requests.html
@@ -84,7 +84,7 @@
 						<h3>Recent Incoming Requests</h3>
 						<button class="refresh_button" onclick="getAllIncomingRequests()"><img src="Resources/refresh-icon.png"></button>
 					</div>
-					<p>Here you can see all the incoming HTTP requests to your site. Blocked requests are red.
+					<p class="explanation">Here you can see all the incoming HTTP requests to your site. Blocked requests are red.
 						<br>If you want to see more details (like full HTTP request, attack detected, etc.) click on the request.</p>
 
                     <table>
