Styled toggle button

--- a/Gorilla-AdminManager-GUI/Frontend/settings.html
+++ b/Gorilla-AdminManager-GUI/Frontend/settings.html
@@ -75,8 +75,16 @@
 					</ul>
 				</div>
 			</div>
-           
+			
 			<div class="table-data">
+				<label class="switch">
+					<input type="checkbox">
+					<span class="slider round"></span>
+				</label>
+				<h3>Start/Stop Gorilla WAF</h3>
+			</div>
+
+			<div class="table-data" id="add-remove-urls">
 
 				<div class="order" id="blacklist_table">
 					<div class="head">
