Connected frontend&backend of start/stop WAF

--- a/Gorilla-AdminManager-GUI/Frontend/settings.html
+++ b/Gorilla-AdminManager-GUI/Frontend/settings.html
@@ -78,10 +78,11 @@
 			
 			<div class="table-data">
 				<label class="switch">
-					<input type="checkbox">
+					<input type="checkbox" id="start-stop-waf">
 					<span class="slider round"></span>
 				</label>
 				<h3>Start/Stop Gorilla WAF</h3>
+				<p class="error-message" id="switchError">Error Message</p>
 			</div>
 
 			<div class="table-data" id="add-remove-urls">
