Done Start/Stop WAF's switch + check status!

--- a/Gorilla-AdminManager-GUI/Frontend/settings.html
+++ b/Gorilla-AdminManager-GUI/Frontend/settings.html
@@ -12,7 +12,7 @@
 	<title>Gorilla Admin Manager</title>
 </head>
 
-<body onload="getAllowedURLs()">
+<body onload="get_waf_status(); getAllowedURLs();">
 
 
 	<!-- SIDEBAR -->
