Removed stats and waf-switch

--- a/Gorilla-AdminManager-GUI/Frontend/Sources/index.html
+++ b/Gorilla-AdminManager-GUI/Frontend/Sources/index.html
@@ -39,11 +39,6 @@
 				</a>
 			</li>
 			<li>
-				<a href="statistics.html">
-					<span class="text">Statistics</span>
-				</a>
-			</li>
-			<li>
 				<a href="settings.html">
 					<span class="text">Settings</span>
 				</a>
@@ -82,14 +77,13 @@
 					<h1>About Gorilla Admin Manager</h1>
 					<p>
 						Gorilla Admin Manager is a web application that allows you to manage the Gorilla WAF. <br>
-						You can view and change the incoming requests, blacklisted IPs, view statistics and change the settings. <br>
+						You can view and change the incoming requests, blacklisted IPs, and change the settings. <br>
 					</p>
 					<br>
 					<h3>Features</h3>
 					<p>
 						-> View the incoming requests. <br>
 						-> Add/Remove blacklisted IPs<br>
-						-> View statistics. <br>
 						-> Start/Stop the WAF. <br>
 						-> Add/Remove allowed URLs to redirect. <br>
 					</p>
